# ChangeLog for app-forensics/dwAudit
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  12 Jun 2011; Dan Weeks (doctaweeks) <dan@danweeks.net>
  +dwAudit-0.0.3.ebuild, +metadata.xml, +ChangeLog:
  Add dwAudit-0.0.3