@@ -1,5 +1,5 @@
 DIST dwAudit-0.0.3.tar.bz2 1694 RMD160 55b59224bfe6690724da5393a3ed30138a683348 SHA1 ec75dee657479092a623cbec877cb0ece8d219ab SHA256 b3c6e78582a014f36580a775e8fc47d56264c95e4a2418e9421bc0e8169bdda0
 EBUILD dwAudit-0.0.3.ebuild 674 RMD160 d37825ae1f5f9e7a62b611066cc8672e5e06ba40 SHA1 aa3580fb2fc1648bf26c323b7b4c645b51dfda1f SHA256 fdae7a798aee20ff39f2ad8d12d0f4abc9f19a371985f6550df3834b67e3c5e1
 EBUILD dwAudit-9999.ebuild 632 RMD160 56b2953bdfe0ca345aadbfa6f5adac31989bb483 SHA1 1683898f312fcfe7f10836566ea787c42939a553 SHA256 cefab551949c56aed39de7defd8a45d850db378f44bb6e8e18b10a2a566e8d48
-MISC ChangeLog 251 RMD160 4e20638c27c29777786682bb21b146b348b1e67b SHA1 1fd974613bd439ac2398c0bb5d6968f80623d9d0 SHA256 4c34c94f36fad0495ecabb0b915c8d9c9223bd9ea11f0ab230bcba5012e4d9ec
+MISC ChangeLog 352 RMD160 c7affe5ae7e979bdcbd3521d1dddf8b9f4f0a7e7 SHA1 d92ca6c87de47c154f10dba9bb2dee894cdaa977 SHA256 899061c631c46e69669ee1fe7ba59928e660f8cb9f9952ab22bc638d1c55b6b0
 MISC metadata.xml 249 RMD160 cceeba6a49276efc3fdf421952b5d00014a28846 SHA1 40050140dc9c88adcbe4aa3474b69e93882f50e3 SHA256 0052897b1865c0e1c4de2245c5b5b85a2ef41f7475d6f2e78940d21b69634325
