@@ -1,0 +1,11 @@
+#####################################################################
+# $Header: $
+# When you add an entry to this file, add your name, the date, and an
+# explanation of why something is getting masked
+# 
+# NOTE: Please add your entry at the top!
+#
+
+# Dan Weeks <dan@danweeks.net> (12 Jun 2011)
+# Mask live version
+=app-forensics/dwAudit-9999
